--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             </header>
             <nav>
             <a class="button" href="https://hokageb.github.io/Page-1/">Наши услуги</a>
-           <a class="button" href="">Наше местоположение</a>
+           <a class="button" href="https://hokageb.github.io/page-3/">Наше местоположение</a>
             </nav>
         <main>
             <h1>О животных</h1>
